feat: added create-offer endpoint and tests
